<resources>
    <string name="app_name">SuomiFoods</string>
    <string name="suomifoods">-SuomiFoods-</string>
    <string name="powered_by_prasad_suomi_villa">Powered by Prasad Suomi Villa</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_a_new_account_sign_up">Create a New Account? Sign Up</string>
    <string name="phone_no">Phone No</string>
    <string name="address">Address</string>
    <string name="nic">NIC</string>
    <string name="fullname">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="age">Age</string>
    <string name="already_have_an_account_log_in">Already have an Account? Log In</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="choose_your_foods">Choose Your Foods</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="desert">Desert</string>
    <string name="all">All</string>
    <string name="price">Price</string>
    <string name="enter_quantity">Enter Quantity:</string>
    <string name="_1">1</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="order_now">Order Now</string>
    <string name="quantity">Quantity</string>
    <string name="remove_from_cart">Remove from Cart</string>
    <string name="total_rs">Total (Rs):</string>
    <string name="_00_00">00.00</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="order_id">Order ID:</string>
    <string name="total_price_rs">Total Price (Rs):</string>
    <string name="ordered_date">Ordered Date:</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="delete">Delete</string>
    <string name="delete_order">Delete Order</string>
    <string name="pending_delivery">Pending Delivery</string>
    <string name="search">Search</string>
    <string name="received">Received</string>
    <string name="your_profile">Your Profile</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="price_rs">Price (Rs)</string>
    <string name="details">Details</string>
</resources>