<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/button_background2"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_marginTop="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp">
                <TableRow>
                    <TextView
                        android:id="@+id/tv_f_name"
                        android:hint="@string/name"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/tv_f_type"
                        android:hint="@string/type"
                        android:textColor="#000"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>

                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/tv_f_price"
                        android:hint="@string/price"
                        android:textColor="#000"
                        android:textStyle="bold|italic"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp">

                <TableRow>
                    <TextView
                        android:id="@+id/tv_a_time_room"
                        android:hint="@string/enter_quantity"
                        android:textColor="#000"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/et_f_qty"
                        android:maxLength="2"
                        android:text="@string/_1"
                        android:textColor="#000"
                        android:background="@color/white"
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"/>
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp">

                <TableRow>
                    <Button
                        android:id="@+id/btn_add_to_cart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#ED7970"
                        android:text="@string/add_to_cart"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_f_id"
            android:visibility="gone"/>


    </LinearLayout>


</LinearLayout>