<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/button_background2"
        android:padding="15dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/delivery"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp">
                <TableRow>
                    <TextView
                        android:text="@string/order_id"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tv_o_id"
                        android:hint="@string/order_id"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:hint="@string/total_price_rs"
                        android:textColor="#000"
                        android:textStyle="bold|italic"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tv_o_t_price"
                        android:hint="@string/total_price_rs"
                        android:textColor="#000"
                        android:textStyle="bold|italic"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:hint="@string/ordered_date"
                        android:textColor="#000"
                        android:textStyle="bold|italic"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tv_o_date"
                        android:hint="@string/date"
                        android:textColor="#000"
                        android:textStyle="bold|italic"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:hint="@string/status"
                        android:textColor="#000"
                        android:textStyle="bold|italic"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tv_0_status"
                        android:hint="@string/status"
                        android:textColor="#000"
                        android:textStyle="bold|italic"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>