<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@drawable/bg5">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintVertical_bias="0.349">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="35sp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.052"
                tools:ignore="MissingConstraints" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:drawableEnd="@drawable/ic_username"
                android:fontFamily="@font/poppinsbold"
                android:hint="@string/fullname"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.166"
                android:drawableRight="@drawable/ic_username" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:drawableEnd="@drawable/ic_nic"
                android:fontFamily="@font/poppinsbold"
                android:hint="@string/nic"
                android:maxLength="10"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.26"
                android:drawableRight="@drawable/ic_nic" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:drawableEnd="@drawable/ic_date"
                android:fontFamily="@font/poppinsbold"
                android:hint="@string/age"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.359"
                tools:ignore="HardcodedText"
                android:drawableRight="@drawable/ic_date" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:drawableEnd="@drawable/ic_address"
                android:fontFamily="@font/poppinsbold"
                android:hint="@string/address"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.459"
                android:drawableRight="@drawable/ic_address" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:drawableEnd="@drawable/ic_phone"
                android:fontFamily="@font/poppinsbold"
                android:hint="@string/phone_no"
                android:maxLength="10"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.556"
                android:drawableRight="@drawable/ic_phone" />

            <ProgressBar
                android:id="@+id/pb_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:drawableEnd="@drawable/ic_email"
                android:fontFamily="@font/poppinsbold"
                android:hint="@string/email"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.656"
                android:drawableRight="@drawable/ic_email" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:drawableEnd="@drawable/ic_password"
                android:fontFamily="@font/poppinsbold"
                android:hint="@string/password"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.749"
                tools:ignore="HardcodedText"
                android:drawableRight="@drawable/ic_password" />

            <Button
                android:id="@+id/buttonSignUp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="46dp"
                android:background="@drawable/button_background"
                android:text="@string/register"
                android:textColor="@android:color/black"
                app:backgroundTint="@null"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.843"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="291dp"
                android:layout_height="56dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/title_bg"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/already_have_an_account_log_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
                app:layout_constraintVertical_bias="0.969"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>