<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/button_background2"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_oi_image"
            android:layout_width="130dp"
            android:layout_height="113dp"
            android:layout_marginTop="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="26dp"
                android:layout_marginLeft="20dp">
                <TableRow>
                    <TextView
                        android:id="@+id/tv_oi_name"
                        android:hint="@string/name"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/tv_oi_price"
                        android:hint="@string/price"
                        android:textColor="#000"
                        android:textStyle="bold|italic"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp">

                <TableRow>
                    <TextView
                        android:id="@+id/tv_a_time_room"
                        android:text="@string/quantity"
                        android:textColor="#000"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_oi_qty"
                        android:hint="@string/quantity"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_oi_id"
            android:visibility="gone"/>


    </LinearLayout>

</LinearLayout>